@@ -11,6 +11,7 @@
    @author Ustun Ergenoglu <ext-ustun.ergenoglu@nokia.com>
    @author Matias Muhonen <ext-matias.muhonen@nokia.com>
    @author Tapio Rantala <ext-tapio.rantala@nokia.com>
+   @author Antti Virtanen <antti.i.virtanen@nokia.com>
 
    This file is part of Sensord.
 
@@ -33,7 +34,7 @@
 
 #include "sysfsadaptor.h"
 #include "deviceadaptorringbuffer.h"
-#include "datatypes/timedunsigned.h"
+#include "datatypes/orientationdata.h"
 
 class ProximityAdaptorAscii : public SysfsAdaptor
 {
@@ -50,9 +51,8 @@ protected:
 
 private:
     void processSample(int pathId, int fd);
-    char buf[16];
 
-    DeviceAdaptorRingBuffer<TimedUnsigned>* proximityBuffer_;
+    DeviceAdaptorRingBuffer<ProximityData>* proximityBuffer_;
 };
 
 #endif
